--- a/Dashboard Page/html-dashboard-page/dashboard.html
+++ b/Dashboard Page/html-dashboard-page/dashboard.html
@@ -277,7 +277,7 @@
           class="absolute top-0 left-0 w-full z-10 bg-transparent md:flex-row md:flex-nowrap md:justify-start flex items-center p-4"
         >
           <div
-            class="w-full mx-autp items-center flex justify-between md:flex-nowrap flex-wrap md:px-10 px-4"
+            class="w-full mx-auto items-center flex justify-between md:flex-nowrap flex-wrap md:px-10 px-4"
           >
             <a
               class="text-white text-sm uppercase hidden lg:inline-block font-semibold"
