--- a/Dashboard Page/html-dashboard-page/dashboard.html
+++ b/Dashboard Page/html-dashboard-page/dashboard.html
@@ -22,7 +22,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/gh/creativetimofficial/tailwind-starter-kit/compiled-tailwind.min.css"
     />
-    <title>Dashboard | Tailwind Starter Kit by Creative Tim</title>
+    <title>Dashboard | Salim MUKHUANA</title>
   </head>
   <body class="text-blueGray-700 antialiased">
     <noscript>You need to enable JavaScript to run this app.</noscript>
